Cleaner code, querying db by id
