# src/main/webapp/restapi/ui/swagger.json
@@ -18,6 +18,11 @@
     "json_Address" : {
       "type" : "object",
       "title" : "Address",
+      "allOf" : [
+        {
+          "$ref" : "#/definitions/json_DAOBean"
+        },
+        {
           "properties" : {
             "addressId" : {
             "readOnly" : false,
@@ -44,13 +49,20 @@
 "description" : "",
 "type" : "string"
             }
-          },
+          }
+        }
+      ],
       "example" : {
   "addressId" : 12345,
   "street" : "...",
   "city" : "...",
   "state" : "...",
-  "zip" : "..."
+  "zip" : "...",
+  "id" : "...",
+  "createDt" : 12345,
+  "updateDt" : 12345,
+  "updateBy" : "...",
+  "deleteDt" : 12345
 },
       "description" : "2018-12-21"
     }
@@ -98,7 +110,17 @@
     "json_Email" : {
       "type" : "object",
       "title" : "Email",
+      "allOf" : [
+        {
+          "$ref" : "#/definitions/json_DAOBean"
+        },
+        {
           "properties" : {
+            "emailId" : {
+            "readOnly" : false,
+"description" : "",
+"type" : "number"
+            },
             "type" : {
             "readOnly" : false,
 "description" : "",
@@ -114,11 +136,19 @@
 "description" : "",
 "type" : "boolean"
             }
-          },
+          }
+        }
+      ],
       "example" : {
+  "emailId" : 12345,
   "type" : "...",
   "value" : "...",
-  "primary" : true
+  "primary" : true,
+  "id" : "...",
+  "createDt" : 12345,
+  "updateDt" : 12345,
+  "updateBy" : "...",
+  "deleteDt" : 12345
 },
       "description" : "2018-12-21"
     }
@@ -126,6 +156,11 @@
     "json_Phone" : {
       "type" : "object",
       "title" : "Phone",
+      "allOf" : [
+        {
+          "$ref" : "#/definitions/json_DAOBean"
+        },
+        {
           "properties" : {
             "phoneId" : {
             "readOnly" : false,
@@ -157,14 +192,21 @@
 "description" : "",
 "type" : "boolean"
             }
-          },
+          }
+        }
+      ],
       "example" : {
   "phoneId" : 12345,
   "number" : "...",
   "type" : "...",
   "areaCode" : "...",
   "extension" : "...",
-  "primary" : true
+  "primary" : true,
+  "id" : "...",
+  "createDt" : 12345,
+  "updateDt" : 12345,
+  "updateBy" : "...",
+  "deleteDt" : 12345
 },
       "description" : "2018-12-21"
     }
@@ -270,13 +312,23 @@
     "street" : "...",
     "city" : "...",
     "state" : "...",
-    "zip" : "..."
+    "zip" : "...",
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   }, {
     "addressId" : 12345,
     "street" : "...",
     "city" : "...",
     "state" : "...",
-    "zip" : "..."
+    "zip" : "...",
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   } ],
   "roles" : [ "...", "..." ],
   "country" : "...",
@@ -287,23 +339,45 @@
     "type" : "...",
     "areaCode" : "...",
     "extension" : "...",
-    "primary" : true
+    "primary" : true,
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   }, {
     "phoneId" : 12345,
     "number" : "...",
     "type" : "...",
     "areaCode" : "...",
     "extension" : "...",
-    "primary" : true
+    "primary" : true,
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   } ],
   "emails" : [ {
+    "emailId" : 12345,
     "type" : "...",
     "value" : "...",
-    "primary" : true
+    "primary" : true,
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   }, {
+    "emailId" : 12345,
     "type" : "...",
     "value" : "...",
-    "primary" : true
+    "primary" : true,
+    "id" : "...",
+    "createDt" : 12345,
+    "updateDt" : 12345,
+    "updateBy" : "...",
+    "deleteDt" : 12345
   } ],
   "showpassword" : "...",
   "id" : "...",
@@ -426,6 +500,65 @@
       }
     }
     ,
+    "\/user/search" : {
+      "get" : {
+        "tags" : [ "UserEndpoint" ],
+        "description" : "",
+        "operationId" : "searchHeroes",
+        "produces" : [ "application/json" ],
+        "parameters" : [
+          {
+            "name" : "Authorization",
+            "in" : "header",
+            "type" : "string",
+            "description" : ""
+          },
+          {
+            "name" : "name",
+            "in" : "query",
+            "type" : "string",
+            "description" : ""
+          }
+        ],
+        "responses" : {
+          "200" : {
+            "schema" : {
+"description" : "",
+"type" : "file"
+            },
+            "description" : ""
+          }
+        }
+      }
+    }
+    ,
+    "\/user/{id}" : {
+      "get" : {
+        "tags" : [ "UserEndpoint" ],
+        "description" : "",
+        "operationId" : "getUser",
+        "produces" : [ "application/json" ],
+        "parameters" : [
+          {
+            "name" : "id",
+            "in" : "path",
+            "required" : true,
+            "type" : "string",
+            "description" : ""
+          }
+        ],
+        "responses" : {
+          "200" : {
+            "schema" : {
+"description" : "",
+"type" : "file"
+            },
+            "description" : ""
+          }
+        }
+      }
+    }
+    ,
     "\/user/{userId}" : {
       "delete" : {
         "tags" : [ "UserEndpoint" ],
@@ -443,31 +576,6 @@
         ],
         "responses" : {
           "204" : {
-            "schema" : {
-"description" : "",
-"type" : "file"
-            },
-            "description" : ""
-          }
-        }
-      }
-      ,
-      "get" : {
-        "tags" : [ "UserEndpoint" ],
-        "description" : "",
-        "operationId" : "getUser",
-        "produces" : [ "application/json" ],
-        "parameters" : [
-          {
-            "name" : "userId",
-            "in" : "path",
-            "required" : true,
-            "type" : "string",
-            "description" : ""
-          }
-        ],
-        "responses" : {
-          "200" : {
             "schema" : {
 "description" : "",
 "type" : "file"
